<?xml version="1.0" encoding="utf-8"?><!--https://stackoverflow.com/questions/3656371/dynamic-string-using-string-xml/24903097#24903097--><!DOCTYPE resources [<!ENTITY appname "WienerLinien Alarm">]>

<resources>
    <string name="app_name">&appname;</string>

    <!-- Notification channels for API >= 26 -->
    <string name="notification_channel_realtime">realtime_notifications</string>

    <string name="battery_optimization_warning_dialog_title">Battery optimizations</string>
    <string name="battery_optimization_warning_dialog_text">The usage of task killers/battery optimization tools breaks the functionality
    of this app. Please consider adding \"&appname;\" to your whitelist in order to let the notifications arrive correctly and on time.\nPLEASE NOTE:
    Many devices are being shipped with a task killer feature (which is turned on by default), you need to exempt the app from those as well.</string>
    <string name="battery_optimization_warning_doze">Since Android 6 (Marshmallow), you also need to put \"&appname;\" on the whitelist of the so-called \"Doze mode\". In order to
    do that, simply press the "Allow" button and then add \"&appname;\" to the list of allowed apps.</string>

    <string name="allow">Allow</string>
    <string name="never_show_again">Never show again</string>

    <!--Main screen menu-->
    <string name="list_empty">No alarms set</string>

    <!--Alarm Setup 1-->
    <string name="one_time_alarms">One time</string>
    <string name="recurring_alarms">Recurring</string>

    <!--Alarm Setup 2-->
    <string name="activity_alarm_setter">Set Alarm</string>
    <string name="alarm_frequency">Alarm Frequency</string>
    <string name="alarm_frequency_once">One time</string>
    <string name="alarm_frequency_recurring">Recurring</string>
    <string name="alarm_choose_date">Choose date</string>
    <string name="alarm_choose_days">Choose days</string>
    <string name="alarm_choose_time">Choose time</string>
    <string name="alarm_no_date_set">No date set</string>
    <string name="alarm_no_days_set">No days selected</string>
    <string name="alarm_no_time_set">No time set</string>

    <!--Notification setup-->
    <string name="alarm_none">None</string>
    <string name="alarm_choose_alarm_mode">Choose alarm mode (optional)</string>
    <string name="alarm_choose_ringtone">Ringtone</string>
    <string name="alarm_choose_vibration">Vibration</string>
    <string name="alarm_choose_vibration_length">Choose vibration length</string>
    <string name="alarm_vibration_short">Short</string>
    <string name="alarm_vibration_medium">Medium</string>
    <string name="alarm_vibration_long">Long</string>
    <string name="alarm_choose_station_direction">Choose station and line</string>
    <string name="alarm_choose_station_button">Select station</string>
    <string name="alarm_no_station_selected">No station selected</string>

    <string name="alarm_recurring_dialog_expl">Alarm should occur every:</string>

    <string name="alarm_next_ring">Next alarm set for %1$s</string>

    <!--All Weekdays-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="everyday">Every day</string>

    <plurals name="days_selected">
        <item quantity="one">%d day selected</item>
        <item quantity="other">%d days selected</item>
    </plurals>

    <!--Station/Steig list-->
    <string name="please_wait">Please wait…</string>
    <string name="search_for_station">Search for station</string>
    <string name="choose_station">Choose station</string>
    <string name="choose_steig">Choose line and direction</string>

    <string name="no_steigs_found">No departures available for this station</string>

    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--Alarm settings-->
    <string name="alarm_settings">Alarm settings</string>

    <string name="delete_alarm_title">Delete alarm?</string>
    <string name="delete_alarm_message">Are you sure you want to delete this alarm?</string>

    <string name="date">Date</string>
    <string name="days">Days</string>
    <string name="time">Time</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibration">Vibration</string>
    <string name="station">Station</string>

    <string name="scheduling_error">Error while scheduling. Please try again.</string>

    <string name="missing_info_title">Could not create alarm</string>
    <string name="missing_info_date">- No alarm date selected</string>
    <string name="missing_info_time">- No alarm time selected</string>
    <string name="missing_info_days">- No recurring days selected</string>
    <string name="missing_info_past">- Time lies in the past</string>
    <string name="missing_info_station">- No station selected</string>

    <string name="dataset_updating">The dataset is currently being updated…</string>
    <string name="dataset_updated">The dataset has just been updated.</string>
    <string name="no_internet_old_dataset">Could not update dataset. Please connect to the internet and restart the app.</string>
    <string name="no_connection_old_dataset">The Wiener Linien servers cannot be reached, could not update dataset.</string>

    <string name="no_internet">No connection. Please make sure that you are connected to a network and try again.</string>
    <string name="no_connection">The Wiener Linien servers did not respond. Please try again later.</string>

    <string name="realtime_error_server_retry">The Wiener Linien servers cannot be reached, retrying in one minute…</string>
    <string name="realtime_error_server">The Wiener Linien servers cannot be reached.</string>
    <string name="realtime_error_client_retry">No connection! Please make sure you are online! Retrying in one minute…</string>
    <string name="realtime_error_client">No connection! Could not retrieve realtime data.</string>

    <string name="open_source_licenses_title">Open Source licenses</string>
    <string name="open_source_licenses">
        <![CDATA[
            <h3>
                This app is using the following open-source libraries (sorted alphabetically):
            </h3>
            <div>
                <b>Commons-CSV</b><br/>
                © 2005-2017 The Apache Software Foundation<br/>
                Licensed under the Apache v2.0 License<br/>
            </div>
            <div>
                <b>Hugo</b><br/>
                © 2013 JakeWharton<br/>
                Licensed under the Apache v2.0 License<br/>
            </div>
            <div>
                <b>Lightweight-Stream-API</b><br/>
                © 2017 aNNiMON<br/>
                Licensed under the Apache v2.0 License<br/>
            </div>
            <div>
                <b>Log</b><br/>
                © 2015 zserge<br/>
                Licensed under the MIT License<br/>
            </div>
            <div>
                <b>Realm Database</b><br/>
                © 2017 Realm<br/>
                Licensed under the Apache v2.0 License<br/>
            </div>
            <div>
                <b>Retrofit</b><br/>
                © 2013 Square, Inc.<br/>
                Licensed under the Apache v2.0 License<br/>
            </div>
            <div>
                <b>ThreeTenABP</b><br/>
                © 2015 JakeWharton<br/>
                Licensed under the Apache v2.0 License<br/>
            </div>
             <div>
                <b>Wiener Linien Piktogramme Wien</b><br/>
                © 2014 Wiener Linien<br/>
                <a href="https://www.data.gv.at/katalog/dataset/stadt-wien_wienerlinienpiktogramme">https://www.data.gv.at/katalog/dataset/stadt-wien_wienerlinienpiktogramme</a><br\>
                Licensed under CC BY 3.0 AT<br/>
            </div>
            <div>
                <p>
                    A copy of the Apache v2.0 License can be found here:
                </p>
                <a href="https://www.apache.org/licenses/LICENSE-2.0">https://www.apache.org/licenses/LICENSE-2.0</a>
            </div>
            <div>
                <p>
                    A copy of the MIT License can be found here:
                </p>
                <a href="https://opensource.org/licenses/MIT">https://opensource.org/licenses/MIT</a>
            </div>
            <div>
                <p>
                    A copy of the CC BY 3.0 AT can be found here:
                </p>
                <a href="https://creativecommons.org/licenses/by/3.0/at/legalcode">https://creativecommons.org/licenses/by/3.0/at/legalcode</a>
            </div>
        ]]>
    </string>

</resources>
