<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.PickerActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_frequency"
                android:textAppearance="@style/SectionTitleText"/>

            <RadioGroup
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                 <RadioButton
                     android:id="@+id/radio_frequency_one_time"
                     android:text="@string/alarm_frequency_once"
                     android:checked="true"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:onClick="switchVisibleDatePicker"
                     android:layout_weight="1"/>

                 <RadioButton
                     android:id="@+id/radio_frequency_recurring"
                     android:text="@string/alarm_frequency_recurring"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="switchVisibleDatePicker"/>

            </RadioGroup>

            <View android:layout_width="match_parent" android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_choose_station_direction"
                android:textAppearance="@style/SectionTitleText"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:onClick="launchStationSteigPicker">
                <Button
                    android:id="@+id/choose_station_button"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_choose_station_button"
                    android:clickable="false" />
                <TextView
                    android:id="@+id/choose_station_text"
                    android:gravity="center"
                    android:text="@string/alarm_no_station_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View android:layout_width="match_parent" android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_choose_date"
                android:textAppearance="@style/SectionTitleText"/>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/choose_date_container"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="launchDatePicker">
                    <Button
                        android:id="@+id/choose_date_button"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_choose_date"
                        android:clickable="false" />
                    <TextView
                        android:id="@+id/choose_date_text"
                        android:gravity="center"
                        android:text="@string/alarm_no_date_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/choose_days_container"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="launchWeekdaysPicker">

                    <Button
                        android:id="@+id/choose_days_button"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_choose_days"
                        android:clickable="false" />
                    <TextView
                        android:id="@+id/choose_days_text"
                        android:gravity="center"
                        android:text="@string/alarm_no_days_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="launchTimePicker">
                    <Button
                        android:id="@+id/choose_time_button"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_choose_time"
                        android:clickable="false"/>
                    <TextView
                        android:id="@+id/choose_time_text"
                        android:gravity="center"
                        android:text="@string/alarm_no_time_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>

            <View android:layout_width="match_parent" android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_choose_alarm_mode"
                android:textAppearance="@style/SectionTitleText" />

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="launchRingtonePicker">
                    <Button
                        android:id="@+id/choose_ringtone_button"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_choose_ringtone"
                        android:clickable="false" />
                    <TextView
                        android:id="@+id/choose_ringtone_text"
                        android:gravity="center"
                        android:text="@string/alarm_none"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/choose_vibration_container"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="launchVibrationPicker">
                    <Button
                        android:id="@+id/choose_vibration_button"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_choose_vibration"
                        android:clickable="false" />
                    <TextView
                        android:id="@+id/choose_vibration_text"
                        android:gravity="center"
                        android:text="@string/alarm_none"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_done"
        android:onClick="saveAndScheduleAlarm" />


</android.support.design.widget.CoordinatorLayout>